@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 22-08-2006 fixed: "hide media extensions" works on virtual folders like playlists, archives, etc.
  - 22-08-2006 updated: libsmbclient to 3.0.23b, fixes some signing issues and some bugs with landrives
  - 21-08-2006 fixed: Window translator for loginscreen did not work, like when you did "site activatewindow(loginscreen)" (Thnx to Spiff).
  - 21-08-2006 fixed: if video was zoomed in so that part of video was rendered above top of display, artifacts in the form of lines would appear using HQ Renderer.
